# axcl-samples

./: .gitignore  CMakeLists.txt  README.md
cmake/: axcl.cmake  check.cmake  summary.cmake
examples/: CMakeLists.txt
examples/axcl/: CMakeLists.txt  ax_classification_steps.cc  ax_depth_anything_steps.cc  ax_yolo11_pose_steps.cc  ax_yolo11_seg_steps.cc  ax_yolo11_steps.cc  ax_yolo11_steps_stdout.cc  ax_yolo11_steps_video.cc  ax_yolo_world_open_vocabulary_steps.cc  ax_yolov10_ultralytics_steps.cc  ax_yolov10s_steps.cc  ax_yolov5_face_steps.cc  ax_yolov5s_seg_steps.cc  ax_yolov5s_steps.cc  ax_yolov7_face_steps.cc  ax_yolov8_pose_steps.cc  ax_yolov8_seg_steps.cc  ax_yolov8_steps.cc  ax_yolov9_steps.cc  ax_yolov9_ultralytics_steps.cc
examples/axcl/ax_model_runner/: ax_model_runner.hpp  ax_model_runner_axcl.cpp
examples/base/: detection.hpp  topk.hpp  yolo.hpp
